update: Collaborators e-mail added.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Kevin Espinoza <kevinyeff94@gmail.com>
-John Naduer <>
+John Naduer <naduer789@gmail.com>
